# anki-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/anki_mcp/: __init__.py  __main__.py  anki_client.py  server.py  spanish.py
tests/: conftest.py  mock_anki.py  test_anki_client.py  test_card_management.py  test_card_stats.py  test_mock_anki.py  test_spanish.py  test_study_analytics.py
