[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-mcp"
version = "0.1.0"
description = "MCP server for connecting Claude Desktop to Anki via AnkiConnect"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jim Kroner" }
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anki_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
